--- a/src/app/components/menuListas/menuListas.html
+++ b/src/app/components/menuListas/menuListas.html
@@ -40,6 +40,26 @@
               </md-button>
             </div>
             <div flex>
+              <md-button ui-sref="viviendaCliente">
+                <md-card>
+                  <md-card-title>
+                    <md-card-title-text>
+                      <span class="md-headline">Vivienda</span>
+                      <span class="md-headline">Cliente</span>
+                    </md-card-title-text>
+                    <md-card-title-media>
+                      <div class="md-media-md card-media">
+                        <center><img style="width: 80px" src="/assets/img/userhouse1.png"></img></center>
+                      </div>
+                    </md-card-title-media>
+                  </md-card-title>
+                </md-card>
+              </md-button>
+            </div>
+          </div>
+
+          <div layout-md="column" layout-lg="row">
+            <div flex>
               <md-button ui-sref="medidores">
                 <md-card>
                   <md-card-title>
@@ -56,9 +76,6 @@
                 </md-card>
               </md-button>
             </div> 
-          </div>
-
-          <div layout-md="column" layout-lg="row">
             <div flex>
               <md-button ui-sref="lecturaMensual">
                 <md-card>
@@ -93,13 +110,16 @@
                 </md-card>
               </md-button>
             </div>
+          </div>
+
+          <div layout-md="column" layout-lg="row">
             <div flex>
-              <md-button ui-sref="#">
+              <md-button ui-sref="boletasEmitidas">
                 <md-card>
                   <md-card-title>
                     <md-card-title-text>
-                      <span class="md-headline">Tarjeta</span>
-                      <span class="md-headline">Nueva</span>
+                      <span class="md-headline">Boletas</span>
+                      <span class="md-headline">Emitidas</span>
                     </md-card-title-text>
                     <md-card-title-media>
                       <div class="md-media-md card-media">
@@ -111,7 +131,6 @@
               </md-button>
             </div> 
           </div>
-          
         </div>
       </div>  
     </div>
