--- a/src/app/components/boletasAbonadas/boletasAbonadas.html
+++ b/src/app/components/boletasAbonadas/boletasAbonadas.html
@@ -22,6 +22,14 @@
         </div>
       </div>
     </div>
+    <div layout="row" flex layout-xs="column">
+      <md-button class="md-icon-button md-raised" layout-fill ui-sref="menuListas" style="margin-bottom: 10px;">
+        <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
+      </md-button>
+    </div> 
+    <!--<div flex="20" layout="row" flex layout-xs="column">
+      <md-button class="md-raised volverListas" md-colors="{background: 'cyan-600'}" layout-fill ui-sref="menuListas">Volver</md-button>
+    </div>-->
     <div flex="94" flex-offset="3" flex-md="94" flex-offset-md="3" flex-xs="94" flex-offset-xs="3" class="fond" style="margin-bottom: 20px">
       <md-table-container>
         <table md-table md-row-select multiple md-progress="promise">
@@ -32,6 +40,7 @@
               <th md-column md-numeric>Monto Abonado</th>
               <th md-column md-numeric>Boleta Emitida</th>
               <th md-column md-numeric>Nombre Cliente</th>
+              <th md-column md-numeric></th>
             </tr>
           </thead>
           <tbody md-body>
@@ -41,12 +50,24 @@
               <td md-cell>{{ abono.monto_abonado }}</td>
               <td md-cell>{{ abono.boleta_emitida.nro_boleta }}</td>
               <td md-cell>{{ abono.boleta_emitida.nombre_cliente }}</td>
-              <td md-cell><md-button class="btn1" layout-fill>Modificar</md-button></td>
+              <td md-cell>
+                <md-button class="md-icon-button" ng-click="vm.eliminarabono(abono.id)" style="margin-right: -25px;">
+                  <md-icon  md-svg-icon="/assets/img/deleteuser.svg"></md-icon>
+                </md-button>
+              </td>
             </tr>
           </tbody>
         </table>
       </md-table-container>
       <md-table-pagination md-limit="query.limit" md-limit-options="[5, 10, 15]" md-page="query.page" md-total="{{desserts.count}}" md-on-paginate="getDesserts" md-page-select></md-table-pagination>
     </div>
+    <!--<div flex="20" layout="row" flex layout-xs="column">
+      <md-button class="md-raised volverListas" md-colors="{background: 'cyan-600'}" layout-fill ui-sref="menuListas">Volver</md-button>
+    </div>-->
+    <div layout="row" flex layout-xs="column">
+      <md-button class="md-icon-button md-raised" layout-fill ui-sref="menuListas" style="margin-bottom: 10px; margin-top: -13px;">
+        <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
+      </md-button>
+    </div> 
   </div>
 </div>
