--- a/src/app/components/boletasPendientes/boletasPendientes.html
+++ b/src/app/components/boletasPendientes/boletasPendientes.html
@@ -5,6 +5,14 @@
     </div> 
   </div><br>
   <div layout-xs="column"> 
+    <div layout="row" flex layout-xs="column">
+      <md-button class="md-icon-button md-raised" layout-fill ui-sref="registroPagos" style="margin-bottom: 10px;">
+        <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
+      </md-button>
+    </div> 
+    <!--<div flex="20" layout="row" flex layout-xs="column">
+      <md-button class="md-raised volverListas" md-colors="{background: 'cyan-600'}" layout-fill ui-sref="registroPagos">Volver</md-button>
+    </div>-->
     <div layout-xs="column" flex="94" flex-offset="3" flex-md="94" flex-offset-md="3" flex-xs="94" flex-offset-xs="3" class="fond">
       <md-table-container>
         <table md-table>
@@ -28,6 +36,14 @@
       </md-table-container>
       <md-table-pagination md-limit="query.limit" md-limit-options="[5, 10, 15]" md-page="query.page" md-total="{{desserts.count}}" md-on-paginate="getDesserts" md-page-select></md-table-pagination>
     </div>
+    <!--<div flex="20" layout="row" flex layout-xs="column">
+      <md-button class="md-raised volverListas" md-colors="{background: 'cyan-600'}" layout-fill ui-sref="registroPagos" style="margin-top: 10px;">Volver</md-button>
+    </div>-->
+    <div layout="row" flex layout-xs="column">
+      <md-button class="md-icon-button md-raised" layout-fill ui-sref="registroPagos" style="margin-bottom: 10px; margin-top: 10px;">
+        <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
+      </md-button>
+    </div> 
   </div>
 </div>
 
