--- a/src/app/components/emisionCobranza/emisionCobranza.html
+++ b/src/app/components/emisionCobranza/emisionCobranza.html
@@ -72,7 +72,7 @@
                 </div>
                 <div layout-xs="column" class="datos">
                   <div layout="row" layout-xs="column">
-                    <div flex>
+                    <div flex="33" flex-xs="100" flex-sm="100">
                       <md-input-container md-no-float class="md-block">
                         <label>Porcentaje Subsidio %</label>
                         <md-icon md-svg-src="/assets/img/subsidio.svg" class="name"></md-icon>
@@ -185,7 +185,7 @@
                 </div>
                 <div layout-xs="column" class="datos">
                   <div layout="row" layout-xs="column">
-                    <div flex>
+                    <div flex="33" flex-xs="100" flex-sm="100">
                       <md-input-container md-no-float class="md-block">
                         <label>Porcentaje Subsidio %</label>
                         <md-icon md-svg-src="/assets/img/subsidio.svg" class="name"></md-icon>
