--- a/src/app/components/registro/actualizarCliente.html
+++ b/src/app/components/registro/actualizarCliente.html
@@ -3,7 +3,7 @@
     <div layout-padding flex layout="column">
       <div layout-xs="column" layout-xs="column" layout="row" layout-align="center center">
         <div>
-          <h2>Registro de Cliente</h2><br>
+          <h2>Actualizar Datos de Cliente</h2><br>
         </div>
       </div>
       <div layout-xs="column" class="datos">
@@ -70,18 +70,13 @@
         </div>
       </div>
       <div layout="row" layout-align="center center" flex layout-xs="column" class="datos">
-        <md-button id="registro" class="md-raised" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;" ng-click="vm.crearcliente(vm.cliente)">Registrar Cliente</md-button>
-      </div>
-      <div layout-xs="column" layout-padding>
-        <md-checkbox name="tos" ng-model="button" required>
-          Aceptos terminos de uso
-        </md-checkbox>
+        <md-button id="registro" class="md-raised" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;" ng-click="vm.actualizarcliente(vm.cliente)">Actualizar Cliente</md-button>
       </div>
       <!--<div layout="row" layout-align="end center" flex layout-xs="column">
-        <md-button class="md-raised volverRegistros" md-colors="{background: 'cyan-600'}" layout-fill ui-sref="menuRegistros">Volver</md-button>
-      </div>--> 
+        <md-button class="md-raised volverRegistros" md-colors="{background: 'cyan-600'}" layout-fill ui-sref="tabla">Volver</md-button>
+      </div>-->
       <div layout="row" layout-align="end center" flex layout-xs="column">
-        <md-button class="md-icon-button md-raised" layout-fill ui-sref="menuRegistros">
+        <md-button class="md-icon-button md-raised" layout-fill ui-sref="tabla">
           <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
         </md-button>
       </div> 
