--- a/src/app/components/registroMedidor/registromedidor.html
+++ b/src/app/components/registroMedidor/registromedidor.html
@@ -44,6 +44,14 @@
           <md-button id="registro" class="md-raised marg" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;" ng-click="vm.crearmedidor(vm.medidor)">Registrar Medidor</md-button>
         </div>
       </div>
+      <!--<div layout="row" layout-align="end center" flex layout-xs="column">
+        <md-button class="md-raised volverRegistros" md-colors="{background: 'cyan-600'}" layout-fill ui-sref="menuRegistros">Volver</md-button>
+      </div>-->  
+      <div layout="row" layout-align="end center" flex layout-xs="column">
+        <md-button class="md-icon-button md-raised" layout-fill ui-sref="menuRegistros">
+          <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
+        </md-button>
+      </div> 
     </div>
   </div>
 </div>
