--- a/src/app/components/registroMensual/registroMensual.html
+++ b/src/app/components/registroMensual/registroMensual.html
@@ -128,22 +128,36 @@
       <div layout-xs="column" class="datos">
         <div flex>
           <div layout="row" layout-xs="column">
-            <div flex>
+            <div flex="50" flex-xs="100">
               <md-input-container class="md-icon-float md-block">
                 <label>Valor a Pagar (CLP) $:</label>
                 <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
                 <input ng-model="valorPagar" type="number">
               </md-input-container>
             </div>
-            <div flex>
+          </div>
+        </div>
+      </div>
+      <div layout-xs="column" class="datos">
+        <div flex>
+          <div layout="row" layout-xs="column">
+            <div flex="50" flex-xs="100">
               <div layout="row" layout-align="center center" layout-padding>
-                <md-button id="registro" class="md-raised marg" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px; width: 200px;">Registrar Lectura</md-button>
+                <md-button id="registro" class="md-raised marg" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px; width: 100%;">Registrar Lectura</md-button>
               </div>
             </div>
+            <div flex="50" flex-xs="100">
+              <!--<div layout="row" layout-align="end center" layout-padding>
+                <md-button class="md-raised" md-colors="{background: 'cyan-600'}" layout-fill ui-sref="menuRegistros" style="height: 45px; width: 150px; border-radius: 13px; font-size: 15px; line-height: 27px; margin-top: 4px;">Volver</md-button>
+              </div>-->
+              <div layout="row" layout-align="end center" flex layout-xs="column">
+                <md-button class="md-icon-button md-raised" layout-fill ui-sref="menuRegistros" style="margin-top: 14px;">
+                  <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
+                </md-button>
+              </div> 
+            </div>
           </div>
-          
         </div>
-        
       </div>
     </div>
   </div>
