--- a/src/app/components/registroPagos/registroPagos.html
+++ b/src/app/components/registroPagos/registroPagos.html
@@ -97,9 +97,17 @@
       </div>
       <div flex layout-xs="column">
         <div layout="row" layout-align="center center" layout-padding>
-          <md-button id="registro" class="md-raised marg" md-colors="{background: 'LightGreen-900'}" ui-sref="boletasPendientes" layout-fill style="min-height: 50px;">Boletas Pendientes</md-button>
+          <md-button id="registro" class="md-raised marg" md-colors="{background: 'LightGreen-900'}" ui-sref="boletasPendientes" layout-fill style="min-height: 50px; margin-bottom: 20px;">Boletas Pendientes</md-button>
         </div>
       </div>
+      <!--<div layout="row" layout-align="end center" flex layout-xs="column">
+        <md-button class="md-raised volverRegistros" md-colors="{background: 'cyan-600'}" layout-fill ui-sref="menuRegistros">Volver</md-button>
+      </div>-->
+      <div layout="row" layout-align="end center" flex layout-xs="column">
+        <md-button class="md-icon-button md-raised" layout-fill ui-sref="menuRegistros">
+          <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
+        </md-button>
+      </div> 
     </div>
   </div>
 </div>
