--- a/src/app/components/registroVivienda/actualizarVivienda.html
+++ b/src/app/components/registroVivienda/actualizarVivienda.html
@@ -3,7 +3,7 @@
     <div layout-padding flex layout="column">
       <div layout-xs="column" layout-xs="column" layout="row" layout-align="center center">
         <div>
-          <h2>Registro de Vivienda</h2>
+          <h2>Actualizar Vivienda</h2>
         </div>
       </div>
       <div layout-xs="column" class="datos">
@@ -69,16 +69,16 @@
       </div>-->
       
       <div layout="row" layout-align="center center" flex layout-xs="column">
-        <md-button id="registro" class="md-raised" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;" ng-click="vm.crearvivienda(vm.vivienda)">Registrar Vivienda</md-button>
-      </div> 
-      <!--<div layout="row" layout-align="end center" flex layout-xs="column">
-        <md-button class="md-raised volverRegistros" md-colors="{background: 'cyan-600'}" layout-fill ui-sref="menuRegistros">Volver</md-button>
+        <md-button id="registro" class="md-raised" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;" ng-click="vm.actualizarvivienda(vm.vivienda)">Actualizar Vivienda</md-button>
+      </div>
+      <!--<div layout="row" layout-align="end center" layout-xs="column">
+        <md-button class="md-raised volverRegistros" md-colors="{background: 'cyan-600'}" layout-fill ui-sref="viviendas">Volver</md-button>
       </div>-->
       <div layout="row" layout-align="end center" flex layout-xs="column">
-        <md-button class="md-icon-button md-raised" layout-fill ui-sref="menuRegistros">
+        <md-button class="md-icon-button md-raised" layout-fill ui-sref="viviendas">
           <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
         </md-button>
-      </div>   
+      </div>    
     </div>
   </div>
 </div>
