--- a/src/app/components/tabla/tabla.html
+++ b/src/app/components/tabla/tabla.html
@@ -22,6 +22,14 @@
         </div>
       </div>
     </div>
+    <div layout="row" flex layout-xs="column">
+      <md-button class="md-icon-button md-raised" layout-fill ui-sref="menuListas" style="margin-bottom: 10px;">
+        <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
+      </md-button>
+    </div> 
+    <!--<div flex="20" layout="row" flex layout-xs="column">
+      <md-button class="md-raised volverListas" md-colors="{background: 'cyan-600'}" layout-fill ui-sref="menuListas">Volver</md-button>
+    </div>-->
     <div flex="94" flex-offset="3" flex-md="94" flex-offset-md="3" flex-xs="94" flex-offset-xs="3" class="fond" style="margin-bottom: 20px">
       <md-table-container>
         <table md-table md-row-select multiple md-progress="promise">
@@ -35,6 +43,8 @@
               <th md-column md-numeric>Email</th>
               <th md-column md-numeric>Residencia</th>
               <th md-column md-numeric></th>
+              <th md-column md-numeric></th>
+              <th md-column md-numeric></th>
             </tr>
           </thead>
           <tbody md-body>
@@ -46,13 +56,34 @@
               <td md-cell>{{ client.telefono }}</td>
               <td md-cell>{{ client.email }}</td>
               <td md-cell>{{ client.residencia }}</td>
-              <th md-cell><md-button class="btn1" ui-sref="cliente">Ver Cliente</md-button></th>
+              <td md-cell>
+                <md-button class="md-icon-button" ng-click="vm.vercliente($index)" style="margin-right: -40px;">
+                  <md-icon  md-svg-icon="/assets/img/profile1.svg"></md-icon>
+                </md-button>
+              </td>
+              <td md-cell>
+                <md-button class="md-icon-button" ng-click="vm.updatecliente(client.id)" style="margin-right: -40px;">
+                  <md-icon  md-svg-icon="/assets/img/edituser.svg"></md-icon>
+                </md-button>
+              </td>
+              <td md-cell>
+                <md-button class="md-icon-button" ng-click="vm.eliminarcliente(client.id)" style="margin-right: -25px;">
+                  <md-icon  md-svg-icon="/assets/img/deleteuser.svg"></md-icon>
+                </md-button>
+              </td>
             </tr>
           </tbody>
         </table>
       </md-table-container>
       <md-table-pagination md-limit="query.limit" md-limit-options="[5, 10, 15]" md-page="query.page" md-total="{{desserts.count}}" md-on-paginate="getDesserts" md-page-select></md-table-pagination>
     </div>
+    <!--<div flex="20" layout="row" flex layout-xs="column">
+      <md-button class="md-raised volverListas" md-colors="{background: 'cyan-600'}" layout-fill ui-sref="menuListas">Volver</md-button>
+    </div>-->
+    <div layout="row" flex layout-xs="column">
+      <md-button class="md-icon-button md-raised" layout-fill ui-sref="menuListas" style="margin-bottom: 10px; margin-top: -13px;">
+        <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
+      </md-button>
+    </div> 
   </div>
-  
 </div>
