--- a/src/app/components/toolbar/toolbar.html
+++ b/src/app/components/toolbar/toolbar.html
@@ -74,6 +74,11 @@
             Cerrar Sesión
           </md-button>
         </div>
+        <div layout="column">
+          <center>
+            <img class="logo" src="/assets/img/intentodelogo.png">
+          </center>
+        </div>
       </div>
     </div>
   </md-sidenav>
@@ -83,7 +88,7 @@
         <md-button hide show-xs class="md-icon-button" ng-click="vm.toggleLeft()">
           <md-icon md-svg-icon="/assets/img/menu.svg"></md-icon>
         </md-button>
-        <h2 flex md-truncate>Be-Water</h2>
+        <h2 flex md-truncate>Agua Potable Rural</h2>
         <md-button class="sesion" ng-if="!vm.isLogged" ui-sref="login">
           Iniciar Sesión
         </md-button>
