--- a/src/app/components/viviendaCliente/viviendaCliente.html
+++ b/src/app/components/viviendaCliente/viviendaCliente.html
@@ -3,17 +3,19 @@
     <div flex="40" flex-offset="30" flex-md="60" flex-offset-md="20" flex-sm="70" flex-offset-sm="15" flex-xs="90" flex-offset-xs="5" class="mar">
       <div flex flex-xs="90" flex-offset-xs="5">
         <div layout-xs="column" layout-xs="column" layout="column" layout-align="center center" style="margin-top: -50px;">
-          <h2>Buscar Lectura Mensual</h2>
-          <h4>INGRESE CÓDIGO DE LA VIVIENDA</h4>
+          <center>
+            <h2>Cliente y Vivienda Respectiva</h2>
+            <h4>INGRESE ID DEL CLIENTE</h4>
+          </center>
         </div>  
         <div flex layout="row">
           <div flex="30" flex-offset="30" flex-xs="60" flex-offset-xs="10"> 
             <md-input-container>
-              <input ng-model="vm.datolectura" type="number" placeholder="Buscar...">
+              <input ng-model="vm.datocliente" type="number" placeholder="Buscar...">
             <md-input-container>
           </div> 
           <div flex=10 flex-xs="20">
-              <md-button class="md-fab md-primary" aria-label="Use Android" md-colors="{background: 'light-blue-600'}" ng-click="vm.busqueda(vm.datolectura)">
+              <md-button class="md-fab md-primary" aria-label="Use Android" md-colors="{background: 'light-blue-600'}" ng-click="vm.busqueda(vm.datocliente)">
                   <md-icon md-svg-src="/assets/img/busqueda.svg"></md-icon>
               </md-button>
           </div>
@@ -34,29 +36,17 @@
           <thead md-head md-order="query.order" md-on-reorder="getDesserts">
             <tr md-row>
               <th md-column md-numeric>Código</th>
-              <th md-column md-numeric>Fecha Registro</th>
-              <th md-column md-numeric>Lectura/Lec. Ant.</th>
-              <th md-column md-numeric>Saldo Pagado</th>
-              <th md-column md-numeric>Consumo</th>
-              <th md-column md-numeric>Valor a Pagar</th>
+              <th md-column md-numeric>Cliente</th>
               <th md-column md-numeric>Vivienda</th>
-              <th md-column md-numeric></th>
+              <th md-column md-numeric>Fecha Adquisición</th>
             </tr>
           </thead>
           <tbody md-body>
-            <tr md-row md-select="dessert" md-select-id="name" md-auto-select class="tabla" ng-repeat="lectura in vm.lecturaMensual">
-              <td md-cell>{{ lectura.id }}</td>
-              <td md-cell>{{ lectura.fecha_registro_consumo }}</td>
-              <td md-cell>{{ lectura.lectura + ' | ' + lectura.lectura_anterior}}</td>
-              <td md-cell>{{ lectura.saldo_pagado }}</td>
-              <td md-cell>{{ lectura.consumo }}</td>
-              <td md-cell>{{ lectura.valor_pagar }}</td>
-              <td md-cell>{{ lectura.vivienda.direccion }}</td>
-              <td md-cell>
-                <md-button class="md-icon-button">
-                  <md-icon  md-svg-icon="/assets/img/edituser.svg"></md-icon>
-                </md-button>
-              </td>
+            <tr md-row md-select="dessert" md-select-id="name" md-auto-select class="tabla" ng-repeat="viviend in vm.viviendacli">
+              <td md-cell>{{ viviend.id }}</td>
+              <td md-cell>{{ viviend.cliente.nombre + ' ' + viviend.cliente.apellido_pater + ' ' + viviend.cliente.apellido_mater }}</td>
+              <td md-cell>{{ viviend.vivienda.direccion}}</td>
+              <td md-cell>{{ viviend.fecha_adquisicion }}</td>
             </tr>
           </tbody>
         </table>
@@ -70,7 +60,6 @@
       <md-button class="md-icon-button md-raised" layout-fill ui-sref="menuListas" style="margin-bottom: 10px; margin-top: -13px;">
         <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
       </md-button>
-    </div>
+    </div> 
   </div>
-  
 </div>
