--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -2,10 +2,10 @@
   <div flex="40" flex-offset="30" flex-md="60" flex-offset-md="20" flex-sm="70" flex-offset-sm="15" flex-xs="90" flex-offset-xs="5" class="fond mar">
     <div layout-padding>
       <div layout-xs="column" layout="row" layout-align="center center">
-        <div>
+        <center>
           <h2>Inicia Sesión</h2>
           <img ng-src="/assets/img/user.png" class="md-card-image" alt="Washed Out">
-        </div>
+        </center>
       </div>
       <div layout-xs="column">
         <div flex>
