--- a/src/app/components/comiteView/clienteComite.html
+++ b/src/app/components/comiteView/clienteComite.html
@@ -3,23 +3,21 @@
     <div flex="40" flex-offset="30" flex-md="60" flex-offset-md="20" flex-sm="70" flex-offset-sm="15" flex-xs="90" flex-offset-xs="5" class="mar">
       <div flex flex-xs="90" flex-offset-xs="5">
         <div layout-xs="column" layout-xs="column" layout="column" layout-align="center center" style="margin-top: -50px;">
-          <div>
-            <center>
-              <h2>Buscar Medidores</h2>
-              <h4>INGRESE MARCA DEL MEDIDOR</h4>
-            </center>
-          </div>
-        </div>
+          <center>
+            <h2>Clientes de Comité</h2>
+            <h4>BLA BLA BLA</h4>
+          </center>
+        </div>  
         <div flex layout="row">
           <div flex="30" flex-offset="30" flex-xs="60" flex-offset-xs="10"> 
             <md-input-container>
-              <input ng-model="vm.datomedidor" type="text" placeholder="Buscar...">
+              <input ng-model="vm.datocliente" type="text" placeholder="Buscar...">
             <md-input-container>
           </div> 
           <div flex=10 flex-xs="20">
-            <md-button class="md-fab md-primary" aria-label="Use Android" md-colors="{background: 'light-blue-600'}" ng-click="vm.busqueda(vm.datomedidor)">
-                <md-icon md-svg-src="/assets/img/busqueda.svg"></md-icon>
-            </md-button>
+              <md-button class="md-fab md-primary" aria-label="Use Android" md-colors="{background: 'light-blue-600'}" ng-click="vm.busqueda(vm.datocliente)">
+                  <md-icon md-svg-src="/assets/img/busqueda.svg"></md-icon>
+              </md-button>
           </div>
         </div>
       </div>
@@ -34,41 +32,21 @@
     </div>-->
     <div flex="94" flex-offset="3" flex-md="94" flex-offset-md="3" flex-xs="94" flex-offset-xs="3" class="fond" style="margin-bottom: 20px">
       <md-table-container>
-        <table md-table md-row-select multiple md-progress="vm.medidor">
+        <table md-table md-row-select multiple md-progress="promise">
           <thead md-head md-order="query.order" md-on-reorder="getDesserts">
             <tr md-row>
-              <th md-column md-numeric>ID</th>
-              <th md-column md-numeric>Código</th>
-              <th md-column md-numeric>Marca</th>
-              <th md-column md-numeric>Fecha Registro</th>
-              <th md-column md-numeric>Lectura Inicial</th>
-              <th md-column md-numeric>Vivienda</th>
-              <th md-column md-numeric>Estado</th>
-              <th md-column md-numeric>Comité</th>
-              <th md-column md-numeric></th>
-              <th md-column md-numeric></th>
+              <th md-column md-numeric>Nombre Cliente</th>
+              <th md-column md-numeric>Num Medidor</th>
+              <th md-column md-numeric>Comuna</th>
+              <th md-column md-numeric>Domicilio</th>
             </tr>
           </thead>
           <tbody md-body>
-            <tr md-row md-select="dessert" md-select-id="name" md-auto-select class="tabla" ng-repeat="medid in vm.medidor">
-              <td md-cell>{{ medid.id }}</td>
-              <td md-cell>{{ medid.num_medidor }}</td>
-              <td md-cell>{{ medid.marca_medidor }}</td>
-              <td md-cell>{{ medid.fecha_registro }}</td>
-              <td md-cell>{{ medid.lectura_inicial }}</td>
+            <tr md-row md-select="dessert" md-select-id="name" md-auto-select class="tabla" ng-repeat="medid in vm.cliente">
+              <td md-cell>{{ medid.nombre }}</td>
+              <td md-cell>{{ medid.vivienda.medidor.num_medidor }}</td>
+              <td md-cell>{{ medid.vivienda.comuna.comuna_id }}</td>
               <td md-cell>{{ medid.vivienda.direccion }}</td>
-              <td md-cell>{{ medid.estado_medidor.des_estado_medidor }}</td>
-              <td md-cell>{{ medid.comite.nombre }}</td>
-              <td md-cell>
-                <md-button class="md-icon-button" ng-click="vm.actualizarmedidor(medid.id)" style="margin-right: -40px;">
-                  <md-icon  md-svg-icon="/assets/img/edituser.svg"></md-icon>
-                </md-button>
-              </td>
-              <td md-cell>
-                <md-button class="md-icon-button" ng-click="vm.eliminarmedidor(medid.id)" style="margin-right: -25px;">
-                  <md-icon  md-svg-icon="/assets/img/deleteuser.svg"></md-icon>
-                </md-button>
-              </td>
             </tr>
           </tbody>
         </table>
@@ -84,4 +62,4 @@
       </md-button>
     </div> 
   </div>
- </div> 
+</div>
