--- a/src/app/components/menuListas/menuListas.html
+++ b/src/app/components/menuListas/menuListas.html
@@ -1,5 +1,10 @@
 <div layout-padding>
   <div flex="100" flex-md="90" flex-offset-md="5" flex-sm="90" flex-offset-sm="5" flex-xs="90" flex-offset-xs="5" class="mar">
+    <!--<div layout="row" flex layout-xs="column">
+      <md-button class="md-icon-button md-raised" layout-fill ui-sref="comiteView" style="margin-bottom: 10px;">
+        <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
+      </md-button>
+    </div>-->
     <div layout-padding flex layout="column">
       <div layout-xs="column" layout-xs="column" layout="row" layout-align="center center">
         <div layout="column" layout-sm="column" layout-xs="column">
